--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "core-js": "^3.6.5",
     "vue": "^3.0.0",
     "vue-clipboard3": "^1.0.1",
-    "vue-router": "^4.0.0-0"
+    "vue-router": "^4.0.0-0",
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@tailwindcss/postcss7-compat": "^2.2.14",
